@@ -6,6 +6,7 @@ import burlton.dartzee.code.utils.DartsDatabaseUtil
 import burlton.desktopcore.test.helpers.AbstractDesktopTest
 import org.apache.derby.jdbc.EmbeddedDriver
 import java.sql.DriverManager
+import javax.swing.UIManager
 
 private const val DATABASE_NAME_TEST = "jdbc:derby:memory:Darts;create=true"
 private var doneOneTimeSetup = false
@@ -19,6 +20,7 @@ abstract class AbstractDartsTest: AbstractDesktopTest()
             return
         }
 
+        UIManager.setLookAndFeel("javax.swing.plaf.nimbus.NimbusLookAndFeel")
         AbstractClient.derbyDbName = DATABASE_NAME_TEST
         DriverManager.registerDriver(EmbeddedDriver())
         DartsDatabaseUtil.initialiseDatabase()
